--- a/POS/POS.Web/Views/StockGroup/Edit.cshtml
+++ b/POS/POS.Web/Views/StockGroup/Edit.cshtml
@@ -18,5 +18,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary" id="btnUpdate">Update</button>
-    <a href="List" class="btn btn-danger">Cancel</a>
+    <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
