--- a/POS/POS.Web/Views/StockGroup/Entry.cshtml
+++ b/POS/POS.Web/Views/StockGroup/Entry.cshtml
@@ -15,7 +15,7 @@
         <textarea class="form-control" placeholder="enter Remarks here" name="Remarks" id="txtRemarks"></textarea>
     </div>
     <button type="submit" class="btn btn-primary" id="btnEntry">Entry</button>
-    <a href="List" class="btn btn-danger">Cancel</a>
+    <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
 
 <script>
