--- a/POS/POS.Web/Views/StockIncome/List.cshtml
+++ b/POS/POS.Web/Views/StockIncome/List.cshtml
@@ -1,39 +1,34 @@
-﻿@model IList<SupplierViewModel>
+﻿@model IList<StockIncomeViewModel>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="~/css/common.css" rel="stylesheet" />
 
-<h3>Suppler List</h3>
+<h3>Stock Income List</h3>
 
-@if(TempData["Msg"] != null && !Convert.ToBoolean(TempData["IsError"]))
+@if(TempData["Msg"] != null)
 {
-    <div class="alert alert-success" role="alert">
-        <span>@TempData["Msg"]</span>
-    </div>
-}
-else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
-{
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-info" role="alert">
         <span>@TempData["Msg"]</span>
     </div>
 }
 
 <div class="table-responsive">
-    <table class="table table-bordered" id="SupplierTable">
+    <table class="table table-bordered" id="StockIncomeTbl">
         <thead>
             <tr>
                 <th scope="col">
-                    <a href="/supplier/entry" class="btn add">
+                    <a href="/StockIncome/entry" class="btn add">
                         <i class="fa fa-plus"></i>
                     </a>
                 </th>
                 <th scope="col">Actions</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Address</th>
+                <th scope="col">Supplier</th>
+                <th scope="col">Stock Group</th>
+                <th scope="col">Stock Item</th>                
+                <th scope="col">Price</th>
+                <th scope="col">Quantity</th>
                 <th scope="col">Remarks</th>
                 <th scope="col">Created At</th>
                 <th scope="col">Created By</th>
@@ -47,31 +42,32 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
                 <tr>
                     <td scope="row">@(Model.IndexOf(item)+1)</td>
                     <td>
-                        <a href="/Supplier/edit?Id=@item.Id" class="btn update">
+                        <a href="/StockIncome/edit?id=@item.Id&suprId=@item.SUPPLIER_ID&grpId=@item.STOCKGRP_ID&itemId=@item.STOCKITEM_ID" class="btn update">
                             <i class="fa fa-pen-to-square"></i>
                         </a>
 
-                        <a href="/Supplier/delete?Id=@item.Id" class="btn delete" onclick="return confirm('Are you sure to delete this record?')">
+                        <a href="/StockIncome/DeleteItem?pCaller=List&id=@item.Id&suprId=@item.SUPPLIER_ID&grpId=@item.STOCKGRP_ID&itemId=@item.STOCKITEM_ID" class="btn delete" onclick="return confirm('Are you sure to delete this record?')">
                             <i class="fa fa-trash"></i>
                         </a>
                     </td>
-                    <td>@item.Name</td>
-                    <td>@item.Email</td>
-                    <td>@item.Phone</td>
-                    <td>@item.Address</td>
+                    <td>@item.SupplierInfo</td>
+                    <td>@item.StkGrpInfo</td>
+                    <td>@item.StkItemInfo</td>                    
+                    <td>@item.PRICE</td>
+                    <td>@item.QUANTITY</td>
                     <td>@item.Remarks</td>
                     <td>@item.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss tt")</td>
                     <td>@item.CreatedBy</td>
                     <td>@(item.UpdatedAt.HasValue ? item.UpdatedAt.Value.ToString("yyyy-MM-dd HH:mm:ss tt") : string.Empty)</td>
                     <td>@item.UpdatedBy</td>
                 </tr>
-            }            
+            }
     </tbody>
 </table>
 </div>
 
 <script>
     $(document).ready(function () {
-        $('#SupplierTable').DataTable(); //added css & js reference in shared _Layout
+        $('#StockIncomeTbl').DataTable(); //added css & js reference in shared _Layout
     });
 </script>
