--- a/POS/POS.Web/Views/StockItem/Entry.cshtml
+++ b/POS/POS.Web/Views/StockItem/Entry.cshtml
@@ -24,6 +24,10 @@
         <input type="text" class="form-control" name="Description" id="txtDesc" placeholder="enter Description here.">
     </div>
     <div class="mb-3">
+        <label for="Sell_Price" class="form-label">Selling Price</label>
+        <input type="number" class="form-control" name="Sell_Price" id="sellPrice" value="0">
+    </div>
+    <div class="mb-3">
         <label for="Barcode" class="form-label">Barcode</label>
         <input type="text" class="form-control" name="Barcode" id="txtBarcode" placeholder="enter Barcode here.">
     </div>
@@ -70,7 +74,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary" id="btnEntry">Entry</button>
-    <a href="List" class="btn btn-danger">Cancel</a>
+    <a href="List" class="btn btn-secondary">Cancel</a>
 </form>
 
 <script>
