--- a/POS/POS.Web/Views/StockGroup/List.cshtml
+++ b/POS/POS.Web/Views/StockGroup/List.cshtml
@@ -2,15 +2,10 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<link rel="stylesheet" href="https://cdn.datatables.net/2.3.0/css/dataTables.dataTables.css" />
-
-<script src="https://cdn.datatables.net/2.3.0/js/dataTables.js"></script>
-
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="~/css/common.css" rel="stylesheet" />
 
-<h3>Stock Group List Informations</h3>
+<h3>Stock Group List</h3>
 
 @if (TempData["Msg"] != null && !Convert.ToBoolean(TempData["IsError"]))
 {
@@ -24,11 +19,16 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
         <span>@TempData["Msg"]</span>
     </div>
 }
+
 <div class="table-responsive">
 <table class="table table-bordered" id="StockGroupTable">
     <thead>
         <tr>            
-            <th scope="col">#</th>
+            <th scope="col">
+                <a href="/StockGroup/entry" class="btn add">
+                        <i class="fa fa-plus"></i>
+                </a>
+            </th>
             <th scope="col">Actions</th>                       
             <th scope="col">Code</th>
             <th scope="col">Description</th>
@@ -46,11 +46,11 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
             <tr>
                 <th scope="row">@(Model.IndexOf(item) + 1)</th>
                 <td>
-                    <a href="/StockGroup/edit?Id=@item.Id" class="btn update" style="padding:0px 10px 0px 5px;">
+                    <a href="/StockGroup/edit?Id=@item.Id" class="btn update">
                         <i class="fa fa-pen-to-square"></i>
                     </a>
 
-                        <a href="/StockGroup/delete?Id=@item.Id" class="btn delete" style="padding:0px 5px;" onclick="return confirm('Are you sure to delete this record?')">
+                    <a href="/StockItem/delete?Id=@item.Id" class="btn delete" onclick="return confirm('Are you sure to delete this record?')">
                         <i class="fa fa-trash"></i>
                     </a>
                 </td>                
